[package]
authors = ["Kyle Zsembery <zsembery.kyle@gmail.com>"]
edition = "2018"
name = "chainflip-cli"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
chainflip-engine = {path = "../../engine/"}
config = "0.11.0"
futures = "0.3.14"
hex = "0.4.3"
serde = {version = "1.0", features = ["derive", "rc"]}
slog = {version = "2.7.0", features = ["max_level_trace", "release_max_level_trace"]}
structopt = "0.3.23"
tokio = {version = "1.5.0", features = ["full"]}
utilities = {path = "../../utilities"}

# State chain
pallet-cf-rewards = {path = "../../state-chain/pallets/cf-rewards"}
pallet-cf-staking = {path = "../../state-chain/pallets/cf-staking"}
pallet-cf-threshold-signature = {path = "../../state-chain/pallets/cf-threshold-signature"}
pallet-cf-validator = {path = "../../state-chain/pallets/cf-validator"}
state-chain-runtime = {path = "../../state-chain/runtime"}
state-chain-node = {path = "../../state-chain/node"}

# Substrate key types
sp-consensus-aura = {git='https://github.com/paritytech/substrate.git', tag="monthly-2021-09+1"}
sp-finality-grandpa = {git='https://github.com/paritytech/substrate.git', tag="monthly-2021-09+1"}