[package]
authors = ["Kyle Zsembery <zsembery.kyle@gmail.com>"]
edition = "2018"
name = "chainflip-cli"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
chainflip-engine = {path = "../../engine/"}
config = "0.11.0"
futures = "0.3.14"
hex = "0.4.3"
serde = {version = "1.0", features = ["derive", "rc"]}
slog = {version = "2.7.0", features = ["max_level_trace", "release_max_level_trace"]}
structopt = "0.3.23"
tokio = {version = "1.5.0", features = ["full"]}
utilities = {path = "../../utilities"}
web3 = {git = 'https://github.com/tomusdrw/rust-web3.git', rev = 'a425fa7'}

# State chain
pallet-cf-rewards = {path = "../../state-chain/pallets/cf-rewards"}
pallet-cf-staking = {path = "../../state-chain/pallets/cf-staking"}
pallet-cf-threshold-signature = {path = "../../state-chain/pallets/cf-threshold-signature"}
pallet-cf-validator = {path = "../../state-chain/pallets/cf-validator"}
pallet-cf-environment = {path = "../../state-chain/pallets/cf-environment"}
state-chain-runtime = {path = "../../state-chain/runtime"}
cf-chains = {path = "../../state-chain/chains"}
chainflip-node = {path = "../../state-chain/node"}

# Substrate key types
sp-core = {git='https://github.com/chainflip-io/substrate.git', tag='merge-config-option'}
sp-consensus-aura = {git='https://github.com/chainflip-io/substrate.git', tag='merge-config-option'}
sp-finality-grandpa = {git='https://github.com/chainflip-io/substrate.git', tag='merge-config-option'}
