[package]
authors = ["Kyle Zsembery <zsembery.kyle@gmail.com>"]
edition = '2021'
name = "chainflip-cli"
version = "0.5.0"

[dependencies]
anyhow = "1.0"
chainflip-engine = {path = "../../engine/"}
clap = {version = "3.1.18", features = ["derive"]}
config = "0.13.1"
futures = "0.3.14"
hex = "0.4.3"
serde = {version = "1.0", features = ["derive", "rc"]}
slog = {version = "2.7.0", features = ["max_level_trace", "release_max_level_trace"]}
tokio = {version = "1.13.1", features = ["full"]}
utilities = {path = "../../utilities"}
web3 = {git = 'https://github.com/tomusdrw/rust-web3.git', rev = '8796c88'}

# State chain
cf-chains = {path = "../../state-chain/chains"}
chainflip-node = {path = "../../state-chain/node"}
pallet-cf-environment = {path = "../../state-chain/pallets/cf-environment"}
pallet-cf-staking = {path = "../../state-chain/pallets/cf-staking"}
pallet-cf-threshold-signature = {path = "../../state-chain/pallets/cf-threshold-signature"}
pallet-cf-validator = {path = "../../state-chain/pallets/cf-validator"}
state-chain-runtime = {path = "../../state-chain/runtime"}

# Substrate key types
sp-consensus-aura = {git = 'https://github.com/chainflip-io/substrate.git', tag = 'chainflip-monthly-2022-05'}
sp-core = {git = 'https://github.com/chainflip-io/substrate.git', tag = 'chainflip-monthly-2022-05'}
sp-finality-grandpa = {git = 'https://github.com/chainflip-io/substrate.git', tag = 'chainflip-monthly-2022-05'}
