[package]
authors = ["Chainflip <https://chainflip.io>"]
edition = '2021'
name = "generate-genesis-keys"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
csv = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# have to use the older version until secp256k1 updates its dependency (https://github.com/rust-bitcoin/rust-secp256k1/issues/328)
rand = { workspace = true }

# Local deps
cf-primitives = { path = "../../state-chain/primitives" }
chainflip-engine = { path = "../../engine" }
chainflip-node = { path = "../../state-chain/node" }
multisig = { path = "../../engine/multisig" }
state-chain-runtime = { path = "../../state-chain/runtime" }
rocksdb = { workspace = true, features = ["lz4"] }

[dev-dependencies]
tempfile = { workspace = true }
