[package]
authors = ['Chainflip <https://chainflip.io>']
description = 'Multisig component of the Chainflip Engine'
edition = '2021'
homepage = 'https://chainflip.io'
license = 'TBC'
name = 'multisig'
repository = 'https://github.com/chainflip-io/chainflip-backend'
version = '0.1.0'

[lints]
workspace = true

[dependencies]
mockall = { workspace = true, optional = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
async-channel = { workspace = true }
async-broadcast = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
secp256k1 = { workspace = true, features = [
	"serde",
	"rand-std",
	"global-context",
] }
serde = { workspace = true, features = ["derive", "rc"] }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-stream = { workspace = true, features = ["sync"] }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
zeroize = { workspace = true }
generic-array = { workspace = true }
public-ip = { workspace = true }
curve25519-dalek = { workspace = true, features = ["serde"] }
typenum = { workspace = true }
schnorrkel = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
blake2 = { workspace = true }

# Local deps
cf-chains = { workspace = true }
cf-primitives = { workspace = true }
state-chain-runtime = { workspace = true }
cf-utilities = { workspace = true }

# substrate deps
sp-core = { workspace = true }
sp-runtime = { workspace = true }
ed25519-dalek = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }

# Turn on the "test" feature flag for tests
multisig = { workspace = true, features = ["test"] }
cf-utilities = { workspace = true, features = ["test-utils"] }

[features]
test = ['mockall']
std = []
