[package]
name = "cf-amm"
version = "0.1.0"
authors = ['Chainflip <https://chainflip.io>']
edition = '2021'
description = "Chainflip's AMM Logic"

[lints]
workspace = true

[dependencies]
cf-primitives = { path = '../primitives', default-features = false }
cf-utilities = { package = 'utilities', path = '../../utilities', default-features = false }
serde = { workspace = true, features = ["derive", "alloc"] }

# Parity deps
codec = { workspace = true, features = [
	'derive',
] }
scale-info = { workspace = true, features = [
	'derive',
] }

sp-core = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2", default-features = false }
sp-std = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2", default-features = false }

[dev-dependencies]
rand = { workspace = true }

[features]
default = ['std']
slow-tests = []
std = [
	'cf-primitives/std',
	'cf-utilities/std',
	'codec/std',
	'scale-info/std',
	'sp-core/std',
	'sp-std/std',
	'serde/std',
]
