[package]
name = "cf-amm"
version = "0.1.0"
authors = ['Chainflip <https://chainflip.io>']
edition = '2021'
description = "Chainflip's AMM Logic"

[lints]
workspace = true

[dependencies]
cf-primitives = { workspace = true }
cf-utilities = { workspace = true }
serde = { workspace = true, features = ["derive", "alloc"] }

# Parity deps
codec = { workspace = true, features = ['derive'] }
scale-info = { workspace = true, features = ['derive'] }

sp-core = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
rand = { workspace = true, features = ["std"] }

[features]
default = ['std']
slow-tests = []
std = [
	'cf-primitives/std',
	'cf-utilities/std',
	'codec/std',
	'scale-info/std',
	'sp-core/std',
	'sp-std/std',
	'serde/std',
]
