[package]
name = 'cf-integration-tests'
version = '0.1.0'
authors = ['Chainflip Team <https://github.com/chainflip-io>']
edition = '2021'
homepage = 'https://chainflip.io'
license = '<TODO>'
publish = false
repository = 'https://github.com/chainflip-io/chainflip-backend'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[lints]
workspace = true

[dependencies]
state-chain-runtime = { path = '../runtime' }
log = { workspace = true }

[dev-dependencies]
libsecp256k1 = { workspace = true, features = ['static-context'] }
rand = { workspace = true }
hex-literal = { workspace = true }
secp256k1 = { workspace = true, features = ["rand-std"] }
arrayref = { workspace = true }

# Chainflip local dependencies
# Additional FRAME pallets
cf-amm = { path = '../amm' }
cf-chains = { path = '../chains', features = ['runtime-integration-tests'] }
cf-primitives = { path = '../primitives' }
cf-test-utilities = { path = '../test-utilities' }
cf-utilities = { package = 'utilities', path = '../../utilities' }
cf-traits = { path = '../traits' }
cfe-events = { path = '../cfe-events' }
chainflip-node = { path = '../node' }
pallet-authorship = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
pallet-cf-account-roles = { path = '../pallets/cf-account-roles' }
pallet-cf-broadcast = { path = '../pallets/cf-broadcast' }
pallet-cf-chain-tracking = { path = '../pallets/cf-chain-tracking' }
pallet-cf-emissions = { path = '../pallets/cf-emissions' }
pallet-cf-environment = { path = '../pallets/cf-environment' }
pallet-cf-flip = { path = '../pallets/cf-flip' }
pallet-cf-funding = { path = '../pallets/cf-funding' }
pallet-cf-governance = { path = '../pallets/cf-governance' }
pallet-cf-ingress-egress = { path = '../pallets/cf-ingress-egress' }
pallet-cf-lp = { path = '../pallets/cf-lp' }
pallet-cf-asset-balances = { path = '../pallets/cf-asset-balances' }
pallet-cf-elections = { path = '../pallets/cf-elections' }
pallet-cf-pools = { path = '../pallets/cf-pools' }
pallet-cf-reputation = { path = '../pallets/cf-reputation' }
pallet-cf-swapping = { path = '../pallets/cf-swapping' }
pallet-cf-threshold-signature = { path = '../pallets/cf-threshold-signature' }
pallet-cf-validator = { path = '../pallets/cf-validator' }
pallet-cf-vaults = { path = '../pallets/cf-vaults' }
pallet-cf-witnesser = { path = '../pallets/cf-witnesser' }
pallet-session = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2", features = [
	'historical',
] }

# Substrate dependencies
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

frame-executive = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
frame-support = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
frame-system = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
frame-system-rpc-runtime-api = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }

pallet-aura = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
pallet-grandpa = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
pallet-timestamp = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
pallet-transaction-payment = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }

sp-block-builder = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
sp-consensus-aura = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }

sp-core = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
sp-inherents = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
sp-offchain = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
sp-runtime = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
sp-session = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
sp-std = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
sp-transaction-pool = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
sp-version = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
sp-consensus-grandpa = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
sp-timestamp = { git = "https://github.com/chainflip-io/polkadot-sdk.git", tag = "chainflip-substrate-1.15.2+2" }
