[package]
name = 'cf-integration-tests'
version = '0.1.0'
authors = ['Chainflip Team <https://github.com/chainflip-io>']
edition = '2021'
homepage = 'https://chainflip.io'
license = '<TODO>'
publish = false
repository = 'https://github.com/chainflip-io/chainflip-backend'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[lints]
workspace = true

[dependencies]
state-chain-runtime = { workspace = true }
log = { workspace = true }

[dev-dependencies]
libsecp256k1 = { workspace = true, features = ['static-context'] }
rand = { workspace = true, features = ["std"] }
hex-literal = { workspace = true }
secp256k1 = { workspace = true, features = ["rand-std"] }
arrayref = { workspace = true }

# Chainflip local dependencies
# Additional FRAME pallets
cf-amm = { workspace = true }
cf-chains = { workspace = true, features = ['runtime-integration-tests'] }
cf-primitives = { workspace = true }
cf-test-utilities = { workspace = true }
cf-utilities = { workspace = true }
cf-traits = { workspace = true }
cfe-events = { workspace = true }
chainflip-node = { workspace = true }
pallet-authorship = { workspace = true }
pallet-cf-account-roles = { workspace = true }
pallet-cf-broadcast = { workspace = true }
pallet-cf-chain-tracking = { workspace = true }
pallet-cf-emissions = { workspace = true }
pallet-cf-environment = { workspace = true }
pallet-cf-flip = { workspace = true }
pallet-cf-funding = { workspace = true }
pallet-cf-governance = { workspace = true }
pallet-cf-ingress-egress = { workspace = true }
pallet-cf-lp = { workspace = true }
pallet-cf-asset-balances = { workspace = true }
pallet-cf-elections = { workspace = true }
pallet-cf-pools = { workspace = true }
pallet-cf-reputation = { workspace = true }
pallet-cf-swapping = { workspace = true }
pallet-cf-threshold-signature = { workspace = true }
pallet-cf-validator = { workspace = true }
pallet-cf-vaults = { workspace = true }
pallet-cf-witnesser = { workspace = true }
pallet-session = { workspace = true, features = ['historical'] }

# Substrate dependencies
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }

pallet-aura = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }

sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }

sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-timestamp = { workspace = true }
